--- a/client/default/index.html
+++ b/client/default/index.html
@@ -1,5 +1,6 @@
 <link rel="stylesheet" type="text/css" href="css/main.css" />
 <link rel="stylesheet" type="text/css" href="css/theme.css" />
+<link rel="stylesheet" type="text/css" href="css/nyan.css" />
 
 <script type="text/javascript">
   var exports = {};
